crates/jsonschema-codegen/tests/ui/resource_unknown_entry_key.rs
#[jsonschema::validator(
    schema = "{}",
    resources = { "json-schema:///u" => { bogus = "x" } }
)]
struct Validator;

fn main() {}
